feat: Autenticação implementada
